data/derived/comb/progs/unify/prog0236.ml.out
Characters 75-100:
  | h::t -> ( (mulByDigit i (List.rev t) * 10 ) + h*i );;
               ^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
